--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:booksystemserver.database.windows.net,1433;Database=Portfolio;Initial Catalog=Portfolio;Persist Security Info=False;User ID=danielboldrin;Password=@Baioysmai!#%;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=100"
+    "DefaultConnection": "Server=tcp:booksystemserver.database.windows.net,1433;Database=BookSystem;Initial Catalog=BookSystem;Persist Security Info=False;User ID=danielboldrin;Password=@Baioysmai!#%;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=100"
   },
     "Logging": {
         "LogLevel": {
